--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^9.77.0",
     "@react-three/fiber": "^8.13.3",
     "@react-three/postprocessing": "^2.14.13",
+    "leva": "^0.9.35",
     "postprocessing": "^6.32.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
