--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "leva": "^0.9.35",
     "postprocessing": "^6.32.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
