--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postprocessing": "^6.32.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-spring": "^9.7.2",
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
