--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@react-three/fiber": "^8.13.3",
     "@react-three/postprocessing": "^2.14.13",
     "leva": "^0.9.35",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.3",
     "postprocessing": "^6.32.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
     "react-spring": "^9.7.2",
+    "sort-by": "^1.2.0",
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
